--- a/index.html
+++ b/index.html
@@ -1457,8 +1457,8 @@
               </div>
             </div>
             <div class="btn">
-              <button class="prev-btn">&#8249;</button>
-              <button class="next-btn">&#8250;</button>
+              <button class="prev-btn"></button>
+              <button class="next-btn"></button>
             </div>
           </div>
 
